--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </div>
     
     <!-- inject cdn to run react,going to this link will give whole js code written by facebook to develop react -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-   <script src="./App.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+   <script type="module" src="./App.js"></script>
 </body>
 </html>
