--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="root">
-        <div>ankit</div>
+        <div>issue in code</div>
     </div>
     
     <!-- inject cdn to run react,going to this link will give whole js code written by facebook to develop react -->
